# seneschal

./: .dockerignore  .env.example  .gitignore  .rubocop.yml  CHANGELOG.md  Dockerfile  Gemfile  LICENSE  README.md  SETUP_INSTRUCTIONS.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yml
app/controllers/: account_controller.rb  application_controller.rb  assistant_conversations_controller.rb  assistant_messages_controller.rb  code_maps_controller.rb  dashboard_controller.rb  data_controller.rb  invites_controller.rb  json_schemas_controller.rb  pipeline_tasks_controller.rb  project_groups_controller.rb  projects_controller.rb  registrations_controller.rb  runs_controller.rb  sessions_controller.rb  setup_controller.rb  skill_repos_controller.rb  skills_controller.rb  step_templates_controller.rb  steps_controller.rb  two_factor_controller.rb  users_controller.rb  workflow_copies_controller.rb  workflows_controller.rb
app/helpers/: application_helper.rb  run_step_context_helper.rb  stream_log_helper.rb
app/javascript/: application.js  turbo_stream_actions.js
app/jobs/: branch_watch_poll_job.rb  clone_repo_job.rb  cron_tick_job.rb  execute_run_job.rb  generate_code_map_job.rb  refetch_repo_job.rb  run_assistant_turn_job.rb  run_recovery_job.rb  (+4 more)
config/: application.rb  brakeman.ignore  brakeman.yml  credentials.yml.enc  importmap.rb  recurring.yml  routes.rb
db/: schema.rb  seeds.rb  structure.sql
lib/sdk_runner/: README.md  pyproject.toml
lib/sdk_runner/src/seneschal_sdk_runner/: main.py
test/: application_system_test_case.rb  test_helper.rb
(+347 files in other folders)
